kubernitiesyamlfiles/ingress/ingress-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spc-svc
spec:
  type: ClusterIP
  selector:
    app: spc
  ports:
    - name: spcport
      port: 8080      
      protocol: TCP
