kubernitiesyamlfiles/ingress/ingresslb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spc-svc-lb
  annotations:
    kubernetes.io/role/internal-elb:"1"
spec:
  type: LoadBalancer
  selector:
    app: spc
  ports:
    - name: spcport
      port: 35000
      targetport: 8080
