kubernitiesyamlfiles/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spc-svc 
  annotations:
    imageregistry: https://hub.docker.com/repository/docker/peddiraju3122b/spc    
spec:
  rules:
    - http: https://hub.docker.com/repository/docker/peddiraju3122b/spc
        paths:
          - path: /
            backend:
              service:
                name: spc-svc
                port: 
                  name: spc-svc
                  number: 8080
            pathType: Exact
